--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
   
 
   <title>Qatar2022</title>
-
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+  <script>
+    window.OneSignal = window.OneSignal || [];
+    OneSignal.push(function() {
+      OneSignal.init({
+        appId: "2e0c32fd-62ab-4dc4-b5c3-d1da8318a0ee",
+      });
+    });
+  </script>
   
 </head>
 
